# funda-scraper

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  main.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update.ipynb
data/: houseprice_20241121_amsterdam_rent_unavailable_15.csv
funda_funda_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
funda_scraper/: __init__.py  app.py  db.py  extract.py  filerepository.py  main.py  preprocess.py  property.py  scrape.py  scrape2.py  searchrequest.py  utils.py
funda_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
funda_scraper/config/: config.yaml  core.py
notebooks/: example.ipynb  scrape.ipynb
requirements/: requirements.txt  requirements_dev.txt  requirements_test.txt
scraper/: config.py  db.py  main.py  preprocess.py  scrape.py  utils.py
test/: test_scrape.py
tests/: test_core.py  test_preprocess.py  test_scrape.py  test_utils.py
