# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funda-scraper"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Will Chien", email = "locriginal@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    "sgmllib3k",
    'tomli; python_version < "3.11"',
    "pyyaml",
    "diot",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "multiprocessing",
    "pandas",
    "datetime",
    "lxml"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/whchien/funda-scraper"
"Bug Tracker" = "https://github.com/whchien/funda-scraper/issues"

[project.scripts]
realpython = "reader.__main__:main"